# IpcOpenSTA

./: .gitmodules  CMakeLists.txt  README.md
src/: OpenStaServerHandler.cpp  OpenStaServerHandler.hpp  main.cpp
